# ica-aroma-org

./: README.md  setup.cfg  setup.py
.github/: issue_template.md
aroma/: aroma.py  features.py  main.py  mixture.py  plotting.py  utils.py
aroma/cli/: aroma.py  classification_plot.py  parser_utils.py
aroma/tests/: conftest.py  test_features.py  test_integration.py  test_utils.py  utils.py
aroma/tests/data/integration_test_ground_truth/: classification_overview.txt  classified_motion_ICs.txt  eigenvalues_percent  feature_scores.txt  melodic_FTmix  melodic_ICstats  melodic_PPCA  melodic_Tmodes
examples/: generate_integration_data.ipynb  run_workflow.ipynb
