[metadata]
name = aroma
url = https://github.com/Brainhack-Donostia/ica-aroma-org
author = BrainHack Donostia
author_email = bhg-donostia@bcbl.eu
maintainer = BrainHack Donostia
maintainer_email = bhg-donostia@bcbl.eu
description = "A port of the ICA-AROMA package."
long_description = file:README.md
long_description_content_type = text/x-md; charset=UTF-8
license = Apache 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
packages = find:
include_package_data = False

[options.package_data]
* =
    data/*

[options.extras_require]
doc =
    sphinx
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
test =
    pytest
    coverage
    %(doc)s
    %(style)%
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = ica-aroma-org/_version.py
versionfile_build = ica-aroma-org/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
exclude=
    *build/
    heuristics
    tests
ignore = E126, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401
